--- a/cmd/signpost/home.html
+++ b/cmd/signpost/home.html
@@ -5,7 +5,7 @@
 <script type="text/javascript">
 window.onload = function () {
     function connect() {
-        conn = new WebSocket("ws://" + document.location.host + "/ws");
+        conn = new WebSocket("ws://{{host}}/ws");
         conn.onclose = function (evt) {
             var item = document.createElement("div");
             item.innerHTML = "<b>Connection closed.</b>";
